2007-12-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/tmpl/buffer.sgml: fix a link in the description.

2007-12-13  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/sql.lang: highlight backtick-quoted
	strings as strings.
	* gtksourceview/language-specs/sh.lang: # does not necessarily starts
	a comment; try not to highlight known commands and keywords when they
	are parts of larger tokens, like 'local' in /usr/local.
	* gtksourceview/language-specs/kate.xml: highlight LaTeX's \usepackage
	and \include as other known commands.

2007-11-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/check.sh: skip check for the lang v1
	test file.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/docbook.lang: reverted last styles
	change, docbook elements should not look like regular xml tags.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/testv1.lang: do not mark anything
	for translation.
	* gtksourceview/language-specs/docbook.lang: use xml:element-name
	default style for docbook elements instead of def:keyword.
	* gtksourceview/language-specs/kate.xml: changed docbook elements
	colors.

2007-11-26  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/pascal.lang: fixed {} comments
	when { is the last character on the line. Patch by Oliver Sauder,
	#499675.

2007-11-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceundomanager.c: replaced a singly-linked
	list of actions with an array, to avoid freezing when undoing/redoing
	big number of actions.

2007-11-16  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/php.lang: fix highlighting of null,
	true and false (e.g. is_null was highlighted as is_ null).

2007-11-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: Improve performance
	with long text lines: use byte offsets in all functions which