@@ -108,3 +108,22 @@ private members and should not be accessed directly.
 @Returns: 
 
 
+<!-- ##### FUNCTION gtk_source_language_get_style_name ##### -->
+<para>
+
+</para>
+
+@language: 
+@style_id: 
+@Returns: 
+
+
+<!-- ##### FUNCTION gtk_source_language_get_style_ids ##### -->
+<para>
+
+</para>
+
+@language: 
+@Returns: 
+
+
