@@ -1,3 +1,11 @@
+2000-01-05  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* gtksourceview/gtksourcelanguage.c
+	* docs/reference/tmpl/language.sgml
+	* docs/reference/gtksourceview-2.0-sections.txt
+	* gtksourceview/gtksourcebuffer.c:
+	* gtksourceview/gtksourceview.c: Some doc fixes.
+
 2007-12-29  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* docs/reference/tmpl/buffer.sgml: fix a link in the description.
